--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@
 
 body {
   font-family: "Graphik";
-  font-size: 40px;
+  font-size: 36px;
   background: linear-gradient(to top right, rgb(136, 135, 135), transparent),
     linear-gradient(to top left, rgb(33, 138, 33), transparent),
     linear-gradient(to bottom left, orange, transparent),
@@ -26,6 +26,12 @@ body {
   overflow-x: hidden;
 }
 
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 24px;
+  }
+}
+
 /* About */
 
 p {
@@ -36,22 +42,8 @@ p {
   background-color: none;
   color: black;
 }
-/* 
-table */
 
-table {
-  font-family: "Graphik";
-  font-size: 40px;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td,
-th {
-  /* border: 1px solid black; */
-  text-align: right;
-  padding: 0px;
-}
+/* Header */
 
 header {
   z-index: 2;
@@ -59,8 +51,10 @@ header {
   display: flex;
   flex-wrap: wrap;
 }
+.homepage {
+  margin-right: 0.5em;
+}
 
-/* Header */
 .header-menu {
   margin-left: auto;
 }
@@ -78,13 +72,13 @@ header {
   letter-spacing: 0px;
   line-height: 100%;
   cursor: pointer;
+  margin-right: 0.5em;
 }
 
 button:hover,
 button:focus,
 button:active,
-button:visited,
-.active {
+button:visited {
   text-decoration: underline;
   text-decoration-thickness: 3.25px;
   color: #000;
@@ -145,13 +139,11 @@ button:visited,
   -moz-transition: left 0.5s ease;
   transition: left 0.5s ease;
   z-index: 1;
-}
-
-input[type="checkbox"] {
-  display: none;
+  padding-left: 2vw;
 }
 
 #portfolio.active {
+  padding-left: 0;
   z-index: 1;
   left: 0%;
 }
@@ -161,8 +153,77 @@ input[type="checkbox"] {
   left: 100%;
 }
 
-input:checked ~ label {
-  left: 0;
+#team {
+  font-family: "Graphik";
+  font-size: 1em;
+  background: linear-gradient(to top right, rgb(100, 85, 68), transparent),
+    linear-gradient(to top left, rgb(113, 49, 150), transparent),
+    linear-gradient(to bottom left, rgb(16, 110, 252), transparent),
+    linear-gradient(to bottom right, rgb(167, 60, 41), transparent);
+  background-blend-mode: screen;
+  background-color: black;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
+  position: fixed;
+  top: 0;
+  right: 0%;
+  left: 98%;
+  bottom: 0;
+  height: 100vh;
+  -moz-transition: left 0.5s ease;
+  transition: left 0.5s ease;
+  z-index: 2;
+  padding: 30px;
+  padding-left: 2vw;
+  min-width: 50vw;
+}
+
+#team.active {
+  padding: 30px;
+  z-index: 2;
+  left: 50%;
+}
+
+@media screen and (max-width: 600px) {
+  #team.active {
+    left: 0;
+  }
+  #team {
+    min-width: 100vw;
+    left: 100%;
+  }
+  #portfolio {
+    left: 100%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header-menu {
+    margin-left: 0;
+  }
+}
+
+#team.hidden {
+  z-index: 0;
+  left: 100%;
+}
+
+.team-header {
+  display: flex;
+  width: 100%;
+}
+
+#team-close {
+  margin-left: auto;
+}
+
+.team-member {
+  margin-top: 30px;
+  display: none;
+}
+
+.team-member.active {
+  display: block;
 }
 
 label {
@@ -195,4 +256,59 @@ a:hover {
 /* selected link */
 a:active {
   color: black;
+}
+
+/*slides*/
+:root {
+  --shadow: rgba(0, 0, 0, 0.2);
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+/* html,
+body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+} */
+
+.slider-container {
+  height: 100vh;
+  display: inline-flex;
+  overflow: hidden;
+  scrollbar-width: none;
+  transform: translateX(0);
+  will-change: transform;
+  transition: transform 0.3s ease-out;
+  cursor: grab;
+}
+
+.slide {
+  max-height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slide img {
+  width: 100%;
+  /* max-height: 100%; */
+  transition: transform 0.3s ease-in-out;
+  box-shadow: 5px 5px 50px -1px var(--shadow);
+  border-radius: 4px;
+  user-select: none;
+}
+
+.grabbing {
+  cursor: grabbing;
+}
+
+.grabbing .slide img {
+  transform: scale(0.99);
+  box-shadow: 5px 5px 40px -1px var(--shadow);
 }
