--- a/stylesheet.css
+++ b/stylesheet.css
@@ -294,6 +294,18 @@ body {
   justify-content: center;
 }
 
+.slide .image-container {
+  position: relative;
+}
+
+.slide .image-container p {
+  position: absolute;
+  bottom: 0;
+  color: white;
+  margin: 15px;
+  font-size: 2rem;
+}
+
 .slide img {
   width: 100%;
   /* max-height: 100%; */
